Issue #11532 - fixed contrast error

--- a/profile/themes/os_admin/scss/global/_global.scss
+++ b/profile/themes/os_admin/scss/global/_global.scss
@@ -14,9 +14,16 @@
 }
 /**** media page ****/
 td.manage-media {
-  a{
+  a {
     &:first-child {
       margin-right: 10px;
+    }
+  }
+}
+.chosen-container-multi {
+  .chosen-drop {
+    .result-selected {
+      color: $color-text;
     }
   }
 }
